# pico-flake

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  Readme.md  flake.nix
.gdb/: connect.gdb
.github/workflows/: ci.yml
src/: main.c
